<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_heading_1x"
                    android:textColor="@color/colorBlack"
                    android:alpha="0.8"
                    android:layout_marginLeft="@dimen/margin_card_medium"
                    android:text="@string/main_label" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@color/colorBlack"
                    android:alpha="0.8"
                    android:layout_marginLeft="@dimen/margin_card_medium"
                    android:text="@string/country" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginTop="3dp"
                    android:nestedScrollingEnabled="false"
                    android:id="@+id/country_recyclerview"
                    android:scrollbars="horizontal"
                    android:layout_marginBottom="3dp"
                    android:layout_height="@dimen/shower_loading_pb_width"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@color/colorBlack"
                    android:alpha="0.8"
                    android:layout_margin="@dimen/margin_card_medium"
                    android:text="@string/popular" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_marginTop="3dp"
                    android:id="@+id/popular_recyclerview"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    tools:listitem="@layout/tour_recyclerview_itemlayout"
                    android:layout_height="match_parent"/>

</LinearLayout>