<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/transparent"
    >

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbarLayout"
        android:layout_width="match_parent"
        app:contentScrim="@android:color/transparent"
        app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
        android:layout_height="350dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bgimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/beach"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:textStyle="bold"
                android:textSize="24sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_height="wrap_content"
                android:text="Koh chan Thailand"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_alignStart="@id/title"
                android:layout_below="@id/title"
                android:layout_marginTop="@dimen/margin_medium"
                android:drawableStart="@drawable/ic_place_black_24dp"
                android:drawablePadding="@dimen/margin_medium"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvLocation"
                android:progressTint="@android:color/white"
                android:rating="2"
                android:progressBackgroundTint="@android:color/white"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_alignStart="@id/tvLocation"
                android:layout_marginTop="@dimen/margin_medium"/>

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ratingBar"
                android:layout_below="@id/tvLocation"
                android:layout_alignTop="@id/ratingBar"
                android:layout_marginStart="@dimen/margin_medium"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:text="2.1" />


        </RelativeLayout>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="parallax"
            >

            <include layout="@layout/detail_toolbar_layout"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:behavior_overlapTop="90dp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginBottom="-50dp"
        app:cardBackgroundColor="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="40dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_margin="20dp">
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_wifi_black_24dp"
                    android:background="@drawable/circle_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/wifi"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_beach_access_black_24dp"
                    android:background="@drawable/circle_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/beach"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_directions_boat_black_24dp"
                    android:background="@drawable/circle_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/coastline"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_marginTop="5dp"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_restaurant_menu_black_24dp"
                    android:background="@drawable/circle_background"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_regular"
                    android:text="@string/bar"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="3dp"
            android:id="@+id/scorce_recyclerview"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:id="@+id/detail"
            android:textStyle="normal"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_regular"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/photo_list_recyclerview"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>